RESOLVED FIXED14457
WebKit can't detect the IM's in certain circumstances
https://bugs.webkit.org/show_bug.cgi?id=14457
Summary WebKit can't detect the IM's in certain circumstances
t.suwa
Reported 2007-06-29 01:48:40 PDT
Overview: WebKit can't detect the IM's event consumption when IM eats the event silently and makes no visual feedbacks. So WebKit sends same keyDown event to the input method twice. Steps to reproduce: 1. Download and install AquaSKK http://prdownloads.sourceforge.jp/aquaskk/25749/AquaSKK-3.4.pkg.zip 2. View any webpage with text field. 3. Click the text field. Select a hirakana input mode(orange icon). 4. Type lowercase "L". Actual results: Select an ascii input mode(gray icon), insert undesired "l" Expected results: Select an ascii input mode, not insert "l". You can see this behavior outside of HTML contents. Build Date & Platform: Jun 28 2007, Mac OS X 10.4.8(intel)
Attachments
Oliver Hunt
Comment 1 2007-07-01 17:58:56 PDT
Okay, i've been looking at bug 13664 and have found the problem is in when i assume the IM will consume an event. Due to the design of IMs we have to assume assume that the IM consumes events in certain circumstances. The current decision on when to do this is based on whether there is marked text. After some more examination, it would seem the correct behaviour is to assume the the event will always be consumed by the IM.
Oliver Hunt
Comment 2 2007-07-01 19:41:40 PDT
Oliver Hunt
Comment 3 2007-07-01 22:20:26 PDT
Landed in r23924
Note You need to log in before you can comment on or make changes to this bug.