        Reviewed by Alexey.

Fix for <rdar://problem/5306210> Some events are still passed to WebCore despite being handled by the IM
        http://bugs.webkit.org/show_bug.cgi?id=14457

        We have to assume that the IM will consume all events, so we remove the dependency
        on -[WebHTMLView hasMarkedText].

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _interceptEditingKeyEvent:shouldSaveCommand:]):



Canonical link: https://commits.webkit.org/18683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@23924 268f45cc-cd09-0410-ab3c-d52691b4dbfc